force-app/main/default/objects/sugati__Apex_Schedule__c/sugati__Apex_Schedule__c.object-meta.xml
<CustomObject>
    <label>Apex Schedule</label>
    <nameField>
        <displayFormat>AS-{000000000}</displayFormat>
        <label>Apex Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>