force-app/main/default/objects/sugati__Apex_Schedule__c/fields/sugati__S_AS_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AS_Class_Name__c</fullName>
    <inlineHelpText>The name of the class to run. Must implement the ISugatiSchedulable interface.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>