force-app/main/default/objects/sugati__Apex_Schedule__c/fields/sugati__S_AS_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AS_Order__c</fullName>
    <description>The order in which the class should run in the thread.</description>
    <inlineHelpText>The order in which the class should run in the thread.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>