force-app/main/default/objects/sugati__Apex_Schedule__c/fields/sugati__S_AS_Run_Every_Minute__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AS_Run_Every_Minute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this class run every minute?</description>
    <inlineHelpText>Should this class run every minute?</inlineHelpText>
    <label>Run Every Minute</label>
    <type>Checkbox</type>
</CustomField>