force-app/main/default/objects/sugati__Apex_Schedule__c/fields/sugati__S_AS_Thread__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AS_Thread__c</fullName>
    <description>Which thread should this class run in? Each thread operates in it&apos;s own execution context.</description>
    <inlineHelpText>Which thread should this class run in? Each thread operates in it&apos;s own execution context.</inlineHelpText>
    <label>Thread</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>